objects/Charge__c.object
<CustomObject>
    <fields>
        <fullName>CR_Account_No__c</fullName>
        <label>CR Account No</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>399200032</fullName>
                </value>
                <value>
                    <fullName>393802243</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR_Ref__c</fullName>
        <label>CR Ref</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Charge2</relationshipLabel>
        <relationshipName>Charge2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charge_Account_No__c</fullName>
        <label>Charge Account No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corp_Code__c</fullName>
        <label>Corp Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BNK</fullName>
                </value>
                <value>
                    <fullName>COR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Ref__c</fullName>
        <label>DR Ref</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Code__c</fullName>
        <label>Transaction Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>613</fullName>
                </value>
                <value>
                    <fullName>609</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Charge</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>